# pnach-qt

./: .gitignore  Cargo.toml  README.md
src/: assimilation.rs  embedded_images.rs  input_pane.rs  input_tab_raw.rs  main.rs  main_window.rs  main_window_slots.rs  output_pane.rs  pane.rs
src/pane/: left_pane.rs  left_pane_slots.rs  mod.rs  right_pane.rs  right_pane_slots.rs
src/tab/: input_encoded.rs  input_raw.rs  mod.rs  tab_encoded.rs  tab_raw.rs
