[package]
name = "pnach-rs"
version = "0.0.0"
authors = ["a-n-t-i-b-a-r-y-o-n"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Ported Omniconvert library
#omniconvert-rs = { path = "../omniconvert-rs" }
# PNach manip
libpnach = { path = "../libpnach" }
# Qt stuff
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"